# flyte-sdk

plugins/plan/: pyproject.toml
plugins/plan/src/flyteplugins/plan/: _analyzer.py  _app.py  cli.py
