[project]
name = "flyteplugins-plan"
dynamic = ["version"]
description = "Interactive TUI for exploring Flyte task call-graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flyte",
    "textual>=0.80",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.entry-points."flyte.plugins.cli.commands"]
plan = "flyteplugins.plan.cli:plan"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
include-package-data = true
license-files = ["licenses/*.txt", "LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flyteplugins*"]

[tool.setuptools_scm]
root = "../../"

[tool.pytest.ini_options]
norecursedirs = []
log_cli = true
log_cli_level = 20
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
]

[tool.uv.sources]
flyte = { path = "../../", editable = true }
